# hackeuuuuurope

./: .gitignore  README.md  agent_creation_pipeline.md  claude.md  embed_fix_plan.md  plan.md  synthesize_block.py
Demo/backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
Demo/backend/blocks/ask_user_confirm/: main.py
Demo/backend/blocks/code_run_python/: main.py
Demo/backend/blocks/commerce_place_order/: main.py
Demo/backend/blocks/data_diff/: main.py
Demo/backend/blocks/data_transform/: main.py
Demo/backend/blocks/elevenlabs_speak/: main.py
Demo/backend/blocks/email_send/: main.py
Demo/backend/blocks/filter_threshold/: main.py
Demo/backend/blocks/loop_for_each/: main.py
Demo/backend/blocks/memory_append/: main.py
Demo/backend/blocks/miro_add_connection/: main.py
Demo/backend/blocks/miro_add_node/: main.py
Demo/backend/blocks/notify_in_app/: main.py
Demo/backend/blocks/product_get_price/: main.py
Demo/backend/blocks/stripe_pay/: main.py
Demo/backend/engine/: clarifier.py  doer.py  executor.py  memory.py  resolver.py  schemas.py  state.py  thinker.py  thinker_stream.py  thinker_synthesis.py
Demo/backend/llm/: service.py
Demo/backend/registry/: blocks.json  custom_blocks.json  local_blocks.json  registry.py
Demo/backend/schemas/: create_block_output.json
Demo/backend/scripts/: seed_blocks.py  supabase_schema.sql
Demo/backend/static/: index.html
Demo/backend/storage/: embeddings.py  memory.py  supabase_client.py  uris.py
Demo/backend/tests/: conftest.py  test_executor.py  test_resolver.py  test_thinker.py
(+984 files in other folders)
